--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,3 +1,6 @@
+jwt:
+  secret: mysupercomplexsecret
+
 spring:
 #  autoconfigure:
  #   exclude: org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
